add a config menu for select a account activation method and add translate files

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,9 @@
 # English strings go here for Rails i18n
 en:
   # my_label: "My label"
+  label_enable_shibboleth: Enable shibboleth authentication
+  label_use_only_shibboleth: Use only the shibboleth authentication
+  label_autocreate_account: Auto-create account
+  label_header_uniqueid: uniqueID header name
+  
+  
