add new setting for shibb login handle, and a shibb login link on the login page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,5 +5,5 @@ en:
   label_use_only_shibboleth: Use only the shibboleth authentication
   label_autocreate_account: Auto-create account
   label_header_uniqueid: uniqueID header name
-  
+  label_shibb_login_handle: shibboleth login handle
   
