--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,25 @@
 # English strings go here for Rails i18n
 en:
   # my_label: "My label"
+  error_must_create_shibboleth_authsource: 'You must create the shibboleth authsource. See bollow.'
+  label_authsource_options: "You must also set the Shibboleth AuthSource here : "
   label_enable_shibboleth: Enable shibboleth authentication
   label_use_only_shibboleth: Use only the shibboleth authentication
   label_autocreate_account: Auto-create account
   label_header_uniqueid: uniqueID header name
   label_shibb_login_handle: shibboleth login handle
-  
+  label_autocreate_comment: "use only if 'On-the-fly user creation' option is set in the Shibboleth AuthSource configuration "
+  label_shibb_handle_comment: "A full login url with target on the login page.<br/>eg : https://www.redmine.org/Shibboleth.sso/Login?target=https://www.redmine.org/login<br/>use only by the shibobleth login link on the login page</em>"
+
+  label_shibb_login_link: Login with Shibboleth
+  error_shibboleth_cannot_login: "Access Denied (base on your shibboleth informations)"
+
+  label_configure_shibboleth_plugin: After save, click here for configure the shibboleth plugin
+  label_create_shibboleth_authsource: "You must create the Shibboleth AuthSource. Click Here : "
+  label_shibboleth_authsource: Shibboleth AuthSource
+  link_create_shibboleth_authsource: Create
+  notice_error_create_shibboleth_authsource: Creation of the Shibboleth AuthSource failed
+  notice_shibboleth_login_error: I cannot login you with shibboleth. Please call your administrator.
+
+  label_shibb_user_format: Shibboleth username display format
+  comment_shibb_user_format: "The username of a shibboleth user is not friendly.<br/>You can choose do not display the username but an other information."
